2009-05-17  Jürg Billeter  <j@bitron.ch>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Vala: Fix build when using per-target VALAFLAGS.
	This does not yet implement full per-target support for VALAFLAGS,
	however, this change at least fixes building when there is only one
	target per source file, which is the most common situation.
	* automake.in: Remove `VALAFLAGS' from `flags' in language struct.
	(lang_vala_finish_target): Handle `*_VALAFLAGS rewriting' manually
	here; check `VALAFLAGS' user variables.
	* tests/Makefile.am (XFAIL_TESTS): Remove vala5.test.
	* doc/automake.texi (Vala Support): Document per-target flag
	limitations.

2009-05-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	For PR automake/540:
	Document some formatting restrictions for Makefile.am files.
	* doc/automake.texi (General Operation, Usage of Conditionals):
	Variable assignments should not be indented by TABs, rule commands
	should.  Conditional keyword statements should not be indented.
	* THANKS: Update.
	Report by Luo Yi.

2009-05-03  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix copyright years in *.am files.
	* lib/am/check.am, lib/am/check2.am, lib/am/distdir.am,
	lib/am/program.am, lib/am/tags.am: Fix copyright years.

	distdir: avoid duplicate `find' traversal with subpackages.
	* lib/am/distdir.am (distdir) [%?SUBDIRS%]: When recursing, set
	`am__skip_mode_fix'.
	[%?TOPDIR_P%]: When `$(am__skip_mode_fix)' is set, avoid tree
	walk.
	* tests/subpkg4.test: New test, to ensure that we still walk the
	whole tree while fixing permissions.  We don't ensure it is
	walked once only.
	* tests/Makefile.am: Update.

	Disable test cleanup trap with OSF1/Tru64 sh.
	* configure.ac: Test whether /bin/sh has working 'set -e'
	in conjunction with an exit trap.  Set $am_cv_sh_errexit_works
	accordingly, substitute sh_errexit_works, and warn about
	leftover test directories with broken shells like Tru64 /bin/sh.
	* tests/defs.in: Do not install any traps with broken shells.
