@@ -5951,6 +5951,32 @@ sub lang_vala_finish_target ($$)
         }
     }
 
+  # Add rebuild rules for generated header and vapi files
+  my $flags = var ($derived . '_VALAFLAGS');
+  if ($flags)
+    {
+      my $lastflag = '';
+      foreach my $flag ($flags->value_as_list_recursive)
+	{
+	  if (grep (/$lastflag/, ('-H', '-h', '--header', '--internal-header',
+	                          '--vapi', '--internal-vapi', '--gir')))
+	    {
+	      my $headerfile = $flag;
+	      $output_rules .= "$headerfile: ${derived}_vala.stamp\n".
+		"\t\@if test -f \$@; then :; else \\\n".
+		"\t  rm -f ${derived}_vala.stamp; \\\n".
+		"\t  \$(MAKE) \$(AM_MAKEFLAGS) ${derived}_vala.stamp; \\\n".
+		"\tfi\n";
+
+	      # valac is not used when building from dist tarballs
+	      # distribute the generated files
+	      push_dist_common ($headerfile);
+	      $clean_files{$headerfile} = MAINTAINER_CLEAN;
+	    }
+	  $lastflag = $flag;
+	}
+    }
+
   my $compile = $self->compile;
 
   # Rewrite each occurrence of `AM_VALAFLAGS' in the compile
