@@ -44,6 +44,7 @@ END
 
 cat > 'src/Makefile.am' <<'END'
 bin_PROGRAMS = zardoz
+zardoz_VALAFLAGS = -H zardoz.h
 zardoz_CFLAGS = $(GOBJECT_CFLAGS)
 zardoz_LDADD = $(GOBJECT_LIBS)
 zardoz_SOURCES = zardoz.vala
@@ -67,6 +68,11 @@ $AUTOMAKE -a
 
 ./configure || Exit 77
 $MAKE
+
+# test rebuild rules
+rm src/zardoz.h
+$MAKE -C src zardoz.h
+
 $MAKE distcheck
 $MAKE distclean
 mkdir build
