@@ -1,4 +1,16 @@
 2009-05-17  Jürg Billeter  <j@bitron.ch>
+
+	Vala: Add and test rebuild rules for generated header and vapi files.
+	valac will generate additional files when using, for example, -H in
+	VALAFLAGS. We need to recognize these options and add appropriate
+	rebuild rules to fix parallel build.
+	* automake.in (lang_vala_finish_target): Recognize -H, -h,
+	--header, --internal-header, --vapi, --internal-api, --gir flags
+	to valac and rebuild rules for generated headers; distribute
+	and maintainer-clean them.
+	* tests/vala2.test: Test rebuild rules.
+
+2009-05-17  Jürg Billeter  <j@bitron.ch>
 	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Vala: Fix build when using per-target VALAFLAGS.
